--- a/app/src/main/res/layout/contact_emergency_support.xml
+++ b/app/src/main/res/layout/contact_emergency_support.xml
@@ -125,7 +125,7 @@
             android:textStyle="bold" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/emergencycall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -179,7 +179,7 @@
                 app:maxImageSize="80dp" />
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/sharelocation2"
+                android:id="@+id/sharelocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/sharelocation"
