--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -198,14 +198,32 @@
             android:textStyle="bold"
             android:textSize="23sp"
             android:text="65"></TextView>
+         <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="3"
+                android:id="@+id/saflay"
+                >
+                    <ImageView
+                        android:id="@+id/safestRoute"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/good"/>
+                    <TextView
+                        android:id="@+id/safety"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:typeface="sans"
+                        android:textColor="@color/colorHomeBlockFive"
+                        android:textSize="17sp"
+                        android:text="Safest">
 
-        <ImageView
-            android:id="@+id/safestRoute"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:src="@drawable/good"/>
+                    </TextView>
+            </LinearLayout>
     </LinearLayout>
 
     <View
@@ -422,6 +440,31 @@
             android:textSize="20dp"
             android:text="10"></TextView>
 
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginTop="10dp">
+        <Button
+            android:id="@+id/info4"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:background="@drawable/tooltips"
+            android:backgroundTint="@color/colorButton"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:text="Click pedestrian sensor icon on map for more info."
+            android:textSize="12sp"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/colorButton"
+            android:typeface="sans"
+            android:textStyle="bold"/>
     </LinearLayout>
 
 </LinearLayout>
