--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,6 +57,7 @@
     <color name="color3">#E39695</color>
     <color name="color4">#99D17B</color>
     <color name="color5">#DBB68F</color>
+    <color name="emergnecycolor">#9a1649</color>
 
 
 </resources>
