--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,8 @@
         android:id="@+id/searchRouteBtn"
         android:layout_width="140dp"
         android:layout_height="140dp"
+        android:clickable="true"
+        android:focusable="true"
         android:paddingTop="20dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -53,6 +55,8 @@
         android:id="@+id/safetyTips"
         android:layout_width="140dp"
         android:layout_height="140dp"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_below="@id/searchRouteBtn"
         android:layout_marginTop="50dp"
         android:paddingTop="30dp"
@@ -97,6 +101,8 @@
             android:id="@+id/emergencySupportBtn"
             android:layout_width="140dp"
             android:layout_height="140dp"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
@@ -115,6 +121,8 @@
             android:id="@+id/aboutUs"
             android:layout_width="140dp"
             android:layout_height="140dp"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_below="@id/searchRouteBtn"
             android:layout_marginTop="50dp"
             android:background="@drawable/button_bg_rounded_corners"
